# envoy-acme

./: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.upstream  Makefile  README.md  compose.yaml  deny.toml
.github/workflows/: ci.yaml  release.yaml
config/: example.yaml
config/pebble-certs/: NOTICE
docs/: production-readiness-audit.md
docs/audits/: 2026-Q3-production-readiness.md  README.md
docs/operator/: configuration.md  deployment.md  metrics.md  release-verification.md  security.md
envoy/: bootstrap.test.yaml  bootstrap.yaml
proto/: README.md
src/: acme.rs  atomic_write.rs  bootstrap.rs  cert_store.rs  challenge_store.rs  config.rs  errors.rs  ext_proc.rs  http_filter.rs  lib.rs  main.rs  metrics.rs  runtime.rs  sds.rs  state_lock.rs  test_stubs.rs
src/acme/: account.rs  account_test_server.rs  backoff.rs  client.rs  mod.rs  order.rs  renewal.rs
src/cert_sink/: filesystem.rs  mod.rs
